tests/cases/errors/loop_label/break_outside_loop.vnm
fn main() {
  let x = 0;
  if (x == 0) {
    break;
  }
  return 0;
}

main();
